<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="nQc-We-7p3">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--The State of Testing-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TheStateOfTesting" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8PY-gJ-cvp">
                                <rect key="frame" x="40" y="265" width="520" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="oBx-1C-beM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwm-3D-AZL">
                                <rect key="frame" x="40" y="237" width="41" height="20"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hwR-lX-avs">
                                <rect key="frame" x="40" y="339" width="520" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="nAg-Cp-yBR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tbd-7w-1s0">
                                <rect key="frame" x="40" y="311" width="74" height="20"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ITb-4C-l8v">
                                <rect key="frame" x="270" y="377" width="61" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="Submit"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="submitButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bka-4O-xNS"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstItem="hwR-lX-avs" firstAttribute="top" secondItem="Tbd-7w-1s0" secondAttribute="bottom" constant="8" id="4QJ-QF-n1y"/>
                            <constraint firstItem="Tbd-7w-1s0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="20" id="7yf-Zw-2US"/>
                            <constraint firstItem="8PY-gJ-cvp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-20" id="FxC-bF-dWb"/>
                            <constraint firstItem="hwR-lX-avs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="IQh-j4-5gF"/>
                            <constraint firstItem="8PY-gJ-cvp" firstAttribute="top" secondItem="nwm-3D-AZL" secondAttribute="bottom" constant="8" id="JYc-kY-H8I"/>
                            <constraint firstAttribute="trailingMargin" secondItem="8PY-gJ-cvp" secondAttribute="trailing" constant="20" id="bv3-j9-fhq"/>
                            <constraint firstItem="ITb-4C-l8v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="doy-Zp-SIe"/>
                            <constraint firstItem="ITb-4C-l8v" firstAttribute="top" secondItem="hwR-lX-avs" secondAttribute="bottom" constant="8" id="iW6-Qo-7q4"/>
                            <constraint firstItem="8PY-gJ-cvp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="jGT-US-hPq"/>
                            <constraint firstItem="nwm-3D-AZL" firstAttribute="leading" secondItem="8PY-gJ-cvp" secondAttribute="leading" id="jW7-er-vhn"/>
                            <constraint firstItem="Tbd-7w-1s0" firstAttribute="leading" secondItem="nwm-3D-AZL" secondAttribute="leading" id="nWX-Qd-QZY"/>
                            <constraint firstAttribute="trailingMargin" secondItem="hwR-lX-avs" secondAttribute="trailing" constant="20" id="wcU-fD-wSv"/>
                        </constraints>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="CDe-Oh-ohT" appends="YES" id="c2S-eg-7Kb"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="The State of Testing" id="UHI-4e-o4N"/>
                    <connections>
                        <outlet property="emailLabel" destination="nwm-3D-AZL" id="QZg-AA-efy"/>
                        <outlet property="emailTextField" destination="8PY-gJ-cvp" id="Taz-iq-LLx"/>
                        <outlet property="passwordLabel" destination="Tbd-7w-1s0" id="7YC-3F-yam"/>
                        <outlet property="passwordTextFIeld" destination="hwR-lX-avs" id="HAv-CV-CPS"/>
                        <segue destination="aOH-Qu-LYb" kind="show" identifier="SuccessfulLoginSegueIdentifier" id="Cry-sE-GIl"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <tapGestureRecognizer id="CDe-Oh-ohT">
                    <connections>
                        <action selector="viewWasTapped:" destination="BYZ-38-t0r" id="jAp-mA-ddN"/>
                    </connections>
                </tapGestureRecognizer>
            </objects>
            <point key="canvasLocation" x="1117" y="387"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="dS9-bW-Z92">
            <objects>
                <viewController id="aOH-Qu-LYb" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="1Eg-eF-fH5"/>
                        <viewControllerLayoutGuide type="bottom" id="aR1-CU-Y4V"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ee5-6b-TDm">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yay you logged in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7b-2p-bXf">
                                <rect key="frame" x="198" y="283" width="205" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="D7b-2p-bXf" firstAttribute="centerX" secondItem="ee5-6b-TDm" secondAttribute="centerX" id="2xT-JT-QHt"/>
                            <constraint firstItem="D7b-2p-bXf" firstAttribute="centerY" secondItem="ee5-6b-TDm" secondAttribute="centerY" id="OXI-DT-NTX"/>
                        </constraints>
                    </view>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                    <size key="freeformSize" width="600" height="600"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hR0-3R-jPJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1906" y="387"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="xQy-XU-E7n">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nQc-We-7p3" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GZQ-ep-9Rc">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="H4F-eq-yjF"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="79S-wC-Adh" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="305" y="387"/>
        </scene>
    </scenes>
</document>
